:sparkles: Add new Index Albums route
* Add OpenAPI specification
* Add new route
* Add new controller method
* Add new resources and transformer
* Add test (to be improved)
* Complete the Album factory for missing fields
